--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -7,10 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
-      - uses: actions/setup-python@v5.5.0
+
       - name: Install tox
         run: pip install tox
-      - name: Install Kerberos development libraries
-        run: sudo apt-get update && sudo apt-get install -y libkrb5-dev
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Set up Python
+        run: uv python install
+
       - name: Run tox
         run: make tox
